--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <script src="js/shuffle.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/tinysort.js"></script>
+    <script src="js/Menubutton2.js"></script>
+    <script src="js/MenuItemLinks.js"></script>
+    <script src="js/PopupMenuLinks.js"></script>
 </head>
 
 
