--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="John Moores University, Graphic Design & Illustration Degree Show 2021">
-    <meta name="keywords" content="Degree show, Graphic Design, Illustration, John Moores University, JMU, Arts School, Liverpool">
+    <meta name="keywords" content="Home, Degree show, Graphic Design, Illustration, John Moores University, JMU, Arts School, Liverpool">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Graphic Design & Illustration Degree Show 2021 | Home</title>
+    <title>Home | Graphic Design &amp; Illustration Degree Show 2021</title>
       <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" />
@@ -19,9 +19,6 @@
     <script src="js/shuffle.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/tinysort.js"></script>
-    <script src="js/Menubutton2.js"></script>
-    <script src="js/MenuItemLinks.js"></script>
-    <script src="js/PopupMenuLinks.js"></script>
 </head>
 
 
